# dochy

./: .gitignore  Cargo.toml  publish.bat  readme.md
dochy_archiver/: Cargo.toml  license.txt
dochy_archiver/src/: lib.rs
dochy_archiver/src/imp/: create_archive_from_directory.rs  get_hash_and_metadata_from_archive.rs  get_hash_and_metadata_from_dir.rs  read_archive_data.rs  resume_archive.rs
dochy_archiver/src/testing/: archive_test.rs  general_to_simple_test.rs
dochy_archiver2/: Cargo.toml
dochy_archiver2/src/: error.rs  lib.rs
dochy_archiver2/src/imp/: create_archive_data_from_dir.rs  create_archive_from_directory.rs  decode.rs  get_file_items_from_directory.rs  get_hash_and_metadata_from_archive.rs  get_hash_and_metadata_from_dir.rs  hash_thread.rs  mod.rs  read_archive.rs  read_archive_data.rs  read_archive_data_from_directory.rs  read_items.rs  resume_archive.rs  write_archive.rs  write_items.rs
dochy_archiver2/src/testing/: archive_test.rs  resume_test.rs
dochy_bench/: Cargo.toml
dochy_bench/src/: lib.rs  util.rs
dochy_bench/src/save_1gb_100/: mod.rs  save_1gb_accessor.rs  save_1gb_bench.rs  save_1gb_generate.rs  save_1gb_json_bench.rs
dochy_compaction/: Cargo.toml  readme.md
dochy_compaction/src/: kval_enum.rs  string_compaction.rs
dochy_compaction/src/enc_dec/: decode.rs  encode.rs  reader.rs  tag_reader.rs
dochy_compaction/src/testing/: test_enc_dec.rs
dochy_core/: Cargo.toml
dochy_core/src/: error.rs  lib.rs
dochy_core/src/old/: json_siyou_old.rs
dochy_core/src/structs/: mod.rs
dochy_core/src/testing/: check_type_size.rs  json_to_rust_and_json.rs  test_linked_m.rs  test_version_adjuster.rs
dochy_diff/: Cargo.toml
dochy_diff/src/: diff_error.rs  lib.rs
dochy_diff/src/imp/: apply_diff.rs  get_diff.rs  structs_read.rs  structs_write.rs
dochy_fs/: Cargo.toml  readme.md
dochy_fs/src/: error.rs  lib.rs
dochy_fs/src/test_diff_history/: show_dir_contents_diff_history.rs  test_diff_his.rs
dochy_fs/src/test_fs/: mod.rs  save_test.rs  test_hex_file_name.rs
dochy_fs/src/test_simple_history/: mod.rs  show_dir_contents_history.rs  test_cumulative_limit_count.rs  test_cumulative_limit_nth.rs  test_load_and_save.rs  test_max_phase0.rs  test_max_phase0_with_cumu.rs  test_simple_diff_files.rs  test_something.rs
dochy_intf/: Cargo.toml
dochy_intf/src/: error.rs  lib.rs
dochy_intf/src/imp/: generate_accessor_from_json_dir.rs  generate_interface.rs  generate_root_source.rs  to_member_source.rs
dochy_intf/src/test/: enum_test.rs  generate_params.rs  generate_siyou.rs  mut_test.rs
dochy_intf/src/test_generated/: params.rs  siyou.rs
dochy_intf/src/util/: dochy_intf_write_file.rs
dochy_json5/: Cargo.toml  licence.txt  readme.md
dochy_json5/src/: lib.rs
dochy_manual/: Cargo.toml  readme.md
dochy_manual/manual/: algorithm_of_history.md  clist_and_mlist.md  conversion.md  directory_composition_and_how_to_handle.md  dochy_params_generate.md  index.md  load_dochy_file.md  load_history_file_test.md  params_test.md  root.md  save_dochy_file_test.md  save_dochy_files.md  save_history_file_test.md  separate_undefined_list.md  split_src.md  use_cil.md  use_mil.md  use_table.md  whats_dochy_history.md
dochy_manual/src/: lib.rs
dochy_manual/src/a1_hello_world/: hello_world.md  hello_world.rs  hello_world_accessor.rs  hello_world_generate.rs  hello_world_load_test.rs  hello_world_save_test.rs  mod.rs
dochy_manual/src/a2_hello_history/: hello_history.md  hello_history_accessor.rs  hello_history_generate.rs  hello_history_load_test.rs  hello_history_save_test.rs  hello_world_accessor.rs  hello_world_generate.rs  hello_world_load_test.rs  hello_world_save_test.rs  hello_world_test.rs  mod.rs
dochy_manual/src/a3_dochy_langs_basics/: dochy_langs_accessor.rs  dochy_params_accessor.rs  dochy_params_generate.rs  mod.rs  nullable_params_accessor.rs  nullable_params_generate.rs  params_test.rs  undefiable_params_accessor.rs  undefiable_params_generate.rs  use_parameters.rs
dochy_manual/src/a4_clist/: cil_accessor.rs  cil_generate.rs  clist_accessor.rs  clist_generate.rs  use_cil.rs
dochy_manual/src/a4_dochy_clist/: cil_accessor.rs  cil_generate.rs  cil_test.rs  clist_accessor.rs  clist_generate.rs  clist_test.rs  mod.rs  use_cil.rs
dochy_manual/src/a5_dochy_mlist/: mil_generate.rs  mlist_generate.rs  use_mil.rs
dochy_manual/src/a5_mlist/: mil_accessor.rs  mil_generate.rs  mlist_accessor.rs  mlist_generate.rs  use_mil.rs
dochy_manual/src/a6_table/: table_accessor.rs  table_generate.rs  use_table.rs
dochy_manual/src/a7_split_dochy_src/: split_src_test.rs
dochy_manual/src/b1_save_dochy_files/: hello_world.md  load_dochy_file.rs  mod.rs  save_dochy_file_test.rs  save_dochy_files.md  save_dochy_files.rs  save_dochy_files_accessor.rs  save_dochy_files_generate.rs  save_history_file.md
dochy_manual/src/b2_save_history_files/: directory_composition_and_how_to_handle.md  load_history_file_test.rs  mod.rs  save_history_file.md  save_history_file_test.rs  save_history_files_accessor.rs  save_history_files_generate.rs  whats_dochy_history.md
dochy_manual/src/b3_1_clist_and_mlist/: clist_new_accessor.rs  clist_new_adjust_test.rs  clist_new_generate.rs  clist_old_generate.rs  clist_old_test.rs  mlist_new_accessor.rs  mlist_new_adjust_test.rs  mlist_new_generate.rs  mlist_old_accessor.rs  mlist_old_generate.rs  mlist_old_test.rs  mod.rs  separate_undefined_list.md  undefiable_list_accessor.rs  undefiable_list_generate.rs  undefiable_list_test.rs
dochy_manual/src/b3_conversion/: conversion.md  conversion_generate.rs  conversion_test.rs  mod.rs  new2_accessor.rs  new2_accessor_wrapper.rs  new_accessor.rs  new_accessor_wrapper.rs  old_accessor.rs  version_awareness_accessor.rs  version_awareness_accessor2.rs  version_awareness_accessor_wrapper2.rs  version_awareness_generate.rs
dochy_manual/src/intf_test/: mod.rs
dochy_manual/src/make_manual/: get_content.rs  index_builder.rs  make_index_page.rs  (+7 more)
dochy_temporal_test/: Cargo.toml
dochy_temporal_test/src/: lib.rs  temporal_test.rs
dochy_test/: Cargo.toml
dochy_test/src/: lib.rs
(+802 files in other folders)
