[package]
name = "dochy"
version = "0.1.2"
authors = ["juzu <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT"
description = "Static data format based on JSON5 to create diff binary and implement undo, autosave."
repository = "https://github.com/dochy-ksti/dochy"
readme = "readme.md"
keywords = ["json5","diff","binary","undo","autosave"]
categories = ["filesystem","compression","data-structures"]

[workspace]
members = [
    "dochy_json5",
]

[dependencies]
dochy_json5 = { path="dochy_json5" }
linked-hash-map = "0.5.2"
fnv = "1.0.7"
anyhow = "1.0.34"
bit-vec = "0.6.1"
arrayvec = "0.5.2"
with_capacity_safe = "0.3.0"
metrohash = "1.0.6"
snap = "1.0.1"
regex = "1.3.1"
lazy_static = "1.4.0"
tempfile = "3.2.0"
rand = "0.8.3"
once_cell = "1.5.2"
flate2 = "1.0.20"