[package]
name = "dochy"
version = "0.4.0"
authors = ["juzu <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT"
description = "Static data format based on JSON5 to create diff binary and implement undo, autosave."
repository = "https://github.com/dochy-ksti/dochy"
readme = "readme.md"
keywords = ["json5","diff","binary","undo","autosave"]
categories = ["filesystem","compression","data-structures"]

[workspace]
members = [
    "dochy_json5",
    "dochy_compaction",
    "dochy_archiver",
    "dochy_core",
    "dochy_diff",
    "dochy_fs",
    "dochy_intf"
]

[dependencies]
dochy_json5 = { path="dochy_json5", version="0.4.0"}
dochy_compaction = { path="dochy_compaction", version="0.4.0" }
dochy_archiver = { path="dochy_archiver", version="0.4.0" }
dochy_core = { path="dochy_core", version="0.4.0" }
dochy_diff = { path="dochy_diff", version="0.4.0"}
dochy_fs = { path="dochy_fs", version="0.4.0"}
dochy_intf = { path="dochy_intf", version="0.4.0"}
anyhow = "1.0.34"
flate2 = "1.0.20"