[package]
name = "dochy_bench"
version = "0.1.0"
authors = ["Juzumaru <dochy.ksti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dochy = { path="../../dochy" }
rand = "0.8.3"
serde_json = "1.0"
serde = "1.0"