[package]
name = "dochy_compaction"
version = "0.8.0"
authors = ["juzy <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "A serializer which compresses integers"
repository = "https://github.com/dochy-ksti/dochy"
readme = "readme.md"
keywords = ["serializer", "encode", "url"]

[dependencies]
bit-vec = "0.6.1"
regex = "1"
lazy_static="1.4"
anyhow = "1.0.34"
arrayvec = "0.5.2"
with_capacity_safe = "0.3.0"
