[package]
name = "dochy_core"
version = "0.5.0"
authors = ["juzu <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT"
description = "A statically typed data language based on JSON5."
repository = "https://github.com/dochy-ksti/dochy"
readme = "readme.md"
keywords = ["data","language"]

[dependencies]
dochy_json5 ={ path="../dochy_json5", version="0.5.0" }
regex = "1.3.1"
lazy_static = "1.4.0"
linked-hash-map = "0.5.2"
rand = "0.7"
fnv = "1.0.7"
anyhow = "1.0.34"
