[package]
name = "dochy_diff"
version = "0.7.1"
authors = ["juzy <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT"
description = "Calculates Dochy Diff."
repository = "https://github.com/dochy-ksti/dochy"
readme = "readme.md"
keywords = ["data","diff"]

[dependencies]
dochy_core = { path="../dochy_core", version="0.7.1" }
dochy_compaction = {path="../dochy_compaction", version="0.7.1"}
bit-vec = "0.6.1"
anyhow = "1.0.34"
with_capacity_safe = "0.3.0"
