[package]
name = "dochy_fs"
version = "0.7.1"
authors = ["juzu <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT"
description = "A file system which composes chlonological diff files efficiently."
repository = "https://github.com/dochy-ksti/dochy"
readme = "readme.md"
keywords = ["data","management","file","system", "diff"]

[dependencies]
dochy_core = {path="../dochy_core", version="0.7.1" }
anyhow = "1.0.34"
dochy_archiver = {path="../dochy_archiver", version="0.7.1"}
dochy_diff = {path="../dochy_diff", version="0.7.1"}
dochy_compaction = {path="../dochy_compaction", version="0.7.1" }
tempfile = "3.2.0"
rand = "0.8.3"
with_capacity_safe = "0.3.0"
once_cell = "1.7.2"
parking_lot = "0.11.1"