[package]
name = "dochy_intf"
version = "0.7.1"
authors = ["juzy <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "Generates the source code to access Dochy Data"
repository = "https://github.com/dochy-ksti/dochy"
readme = "readme.md"
keywords = ["data", "management"]

[dependencies]
dochy_core = {path="../dochy_core", version="0.7.1"}
