[package]
name = "dochy_manual"
version = "0.6.1"
authors = ["Juzy <dochy.ksti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dochy = { path="../../dochy" }
dochy_diff ={ path="../dochy_diff" }
flate2 = "1.0.20"