[package]
name = "dochy_temporal_test"
version = "0.1.0"
authors = ["juzy <dochy.ksti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dochy_core = { path="../dochy_core" }
dochy = { path="../../dochy" }