[package]
name = "dochy_test"
version = "0.1.0"
authors = ["juzu <dochy.ksti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dochy = { path="../../dochy"}
dochy_diff = { path="../dochy_diff"}
rand = "0.8.3"
rayon = "1.5.1"
once_cell = "1.7.2"
parking_lot = "0.11.1"